--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     def viewDependencies = rootProject.ext.viewDependencies
     apt viewDependencies.apt_butterKnife
     compile viewDependencies.butterKnife
+    compile androidDependencies.recyclerView
     compile project(':frescoUtil')
 }
