--- a/frescoUtil/build.gradle
+++ b/frescoUtil/build.gradle
@@ -37,3 +37,5 @@ dependencies {
     compile viewDependencies.frescoPhoto
     compile viewDependencies.gpuImage
 }
+
+apply from: '../bintray.gradle'
