--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,20 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+BINTRAY_USER=
+BINTRAY_KEY=
+PROJ_GROUP=com.shuyu
+PROJ_VERSION=1.0.0
+PROJ_NAME=FrescoUtils
+PROJ_WEBSITEURL=https://github.com/CarGuo/FrescoUtils
+PROJ_ISSUETRACKERURL=
+PROJ_VCSURL=git@github.com:CarGuo/FrescoUtils.git
+PROJ_DESCRIPTION=android fresco utils
+PROJ_ARTIFACTID=FrescoUtils
+PROJ_USER_ORG=guoshuyu
+PROJ_USER_MAVEN=shuyu
+
+
+DEVELOPER_ID=guo
+DEVELOPER_NAME=guoshuyu
+DEVELOPER_EMAIL=359369982@qq.com
