## 1.0.5 update fresco to 1.2.0；移除无用依赖；（2017-04-12）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     apt viewDependencies.apt_butterKnife
     compile viewDependencies.butterKnife
     compile androidDependencies.recyclerView
+    compile androidDependencies.appcompat_v7
+    compile androidDependencies.support_v4
     compile project(':frescoUtil')
 }
